Fix horizontal overflow

--- a/report/index.css
+++ b/report/index.css
@@ -16,7 +16,7 @@ h1, h2, h3 {
 }
 
 .content {
-  overflow-y: hidden;
+  overflow: hidden;
   position: relative;
   height: 100%;
   width: 100%;
